# the-witcher-3-training-model

./: .env.example  .gitignore  README.md  TRAINING_REPORT.md  pyproject.toml  requirements.txt
configs/: sft_qwen35_08b.yaml
scripts/: train.py
src/witcher_sft/: __init__.py  cli.py  config.py  data.py  model.py  trainer.py
tests/: test_config.py
